fix: fixing z-index nav

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -419,7 +419,7 @@ nav .mb-nav-flex {
   }
 
   #cs-bg {
-    z-index: 3;
+    z-index: 9;
     position: fixed;
     width: 100%;
   }
@@ -428,7 +428,7 @@ nav .mb-nav-flex {
 
   .mb-nav {
     width: 100%;
-    height: 0;
+    height: 0%;
     position: fixed;
     z-index: 7;
     transition: all 1s ease;
@@ -439,6 +439,7 @@ nav .mb-nav-flex {
     width: 100%;
     position: fixed;
     z-index: 2;
+
     margin-top: 15%;
   }
 
